# Copyright (c) 2004,  Theodore A. Roth
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# * Redistributions of source code must retain the above copyright
#   notice, this list of conditions and the following disclaimer.
# * Redistributions in binary form must reproduce the above copyright
#   notice, this list of conditions and the following disclaimer in
#   the documentation and/or other materials provided with the
#   distribution.
# * Neither the name of the copyright holders nor the names of
#   contributors may be used to endorse or promote products derived
#   from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.
#
# $Id$
#

avrdir = $(prefix)/avr/include/avr
avr_HEADERS = \
    boot.h \
    crc16.h \
    delay.h \
    eeprom.h \
    interrupt.h \
    io.h \
    io1200.h \
    io2313.h \
    io2323.h \
    io2333.h \
    io2343.h \
    io43u32x.h \
    io43u35x.h \
    io4414.h \
    io4433.h \
    io4434.h \
    io76c711.h \
    io8515.h \
    io8534.h \
    io8535.h \
    io86r401.h \
    ioat94k.h \
    iocan128.h \
    iom103.h \
    iom128.h \
    iom16.h \
    iom161.h \
    iom162.h \
    iom163.h \
    iom165.h \
    iom168.h \
    iom169.h \
    iom32.h \
    iom323.h \
    iom325.h \
    iom3250.h \
    iom329.h \
    iom3290.h \
    iom48.h \
    iom64.h \
    iom645.h \
    iom6450.h \
    iom649.h \
    iom6490.h \
    iom8.h \
    iom8515.h \
    iom8535.h \
    iom88.h \
    iomx8.h \
    io90pwmx.h \
    iotn11.h \
    iotn12.h \
    iotn13.h \
    iotn15.h \
    iotn22.h \
    iotn2313.h \
    iotn26.h \
    iotn28.h \
    parity.h \
    pgmspace.h \
    portpins.h \
    sfr_defs.h \
    signal.h \
    sleep.h \
    wdt.h

